--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "deploy-factory-rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
     "deploy-factory-local": "npx hardhat run scripts/deploy.js --network localhost",
     "create-pod-gnosis": "node scripts/gnosis/createPod.js",
-    "create-pod-rinkeby": "node scripts/rinkeby/createPod.js"
+    "create-pod-rinkeby": "node scripts/rinkeby/createPod.js",
+    "decode": "npx hardhat run scripts/decode.js",
+    "mint": "npx hardhat run scripts/mint.js",
+    "debug": "npx hardhat run scripts/debug.js"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -33,6 +36,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "node-fetch": "2"
   }
 }
